--- a/src/components/lists/CourseList/CourseList.module.css
+++ b/src/components/lists/CourseList/CourseList.module.css
@@ -4,3 +4,9 @@
     gap: 14px;
     padding: 24px 16px;
 }
+
+@media(min-width: 320px) and (max-width: 1023px) {
+    .courseList_wrapper {
+        justify-content: center;
+    }
+}
